--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,27 @@
 buildscript {
-    ext.kotlin_version = '1.2.31'
+    ext.versions = [
+            'compile_sdk_version'      : 28,
+            'target_sdk_version'       : 28,
+            'min_sdk_version'          : 19,
+            'build_tools_version'      : '28.0.1',
+            'android_gradle'           : '3.3.0-alpha04',
+            'kotlin'                   : '1.2.60',
+            'support_library'          : '28.0.0-beta01',
+            'junit'                    : '4.12',
+            'espresso'                 : '3.0.1',
+            'android_test_runner_rules': '0.5',
+            'glide'                    : '4.7.1',
+            'picasso'                  : '2.5.2',
+            'rxjava2'                  : '2.1.17',
+    ]
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:${versions.android_gradle}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
     }
@@ -22,23 +36,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-ext {
-    // Sdk and tools
-    configuration = [
-            compileSdkVersion: 27,
-            targetSdkVersion : 27,
-            minSdkVersion    : 19,
-            buildToolsVersion: '27.0.3'
-    ]
-    // App dependencies
-    libraries = [
-            supportLibraryVersion        : '27.1.1',
-            junitVersion                 : '4.12',
-            espressoVersion              : '3.0.1',
-            androidTestRunnerRulesVersion: '0.5',
-            glideVersion                 : '4.6.1',
-            picassoVersion               : '2.5.2'
-    ]
 }
