--- a/charles/build.gradle
+++ b/charles/build.gradle
@@ -28,16 +28,13 @@ ext {
     allLicenses = ["MIT"]
 }
 
-def configuration = rootProject.ext.configuration
-def libraries = rootProject.ext.libraries
-
 android {
-    compileSdkVersion configuration.compileSdkVersion
-    buildToolsVersion configuration.buildToolsVersion
+    compileSdkVersion versions.compile_sdk_version
+    buildToolsVersion versions.build_tools_version
 
     defaultConfig {
-        minSdkVersion configuration.minSdkVersion
-        targetSdkVersion configuration.targetSdkVersion
+        minSdkVersion versions.min_sdk_version
+        targetSdkVersion versions.target_sdk_version
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -53,10 +50,6 @@ android {
         abortOnError false
     }
 
-    kapt {
-        correctErrorTypes = true
-    }
-
 }
 
 androidExtensions {
@@ -66,15 +59,15 @@ androidExtensions {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "com.android.support:appcompat-v7:${libraries.supportLibraryVersion}"
-    implementation "com.android.support:recyclerview-v7:${libraries.supportLibraryVersion}"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.android.support:appcompat-v7:${versions.support_library}"
+    implementation "com.android.support:recyclerview-v7:${versions.support_library}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
 
-    compileOnly "com.github.bumptech.glide:glide:${libraries.glideVersion}"
-    compileOnly "com.squareup.picasso:picasso:${libraries.picassoVersion}"
+    compileOnly "com.github.bumptech.glide:glide:${versions.glide}"
+    compileOnly "com.squareup.picasso:picasso:${versions.picasso}"
 
-    androidTestImplementation "com.android.support.test:runner:${libraries.androidTestRunnerRulesVersion}"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:${libraries.espressoVersion}"
+    androidTestImplementation "com.android.support.test:runner:${versions.android_test_runner_rules}"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:${versions.espresso}"
 }
 
 apply from: '../deploy.gradle'
