--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,17 +3,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
-def configuration = rootProject.ext.configuration
-def libraries = rootProject.ext.libraries
-
 android {
-    compileSdkVersion configuration.compileSdkVersion
-    buildToolsVersion configuration.buildToolsVersion
+    compileSdkVersion versions.compile_sdk_version
+    buildToolsVersion versions.build_tools_version
 
     defaultConfig {
         applicationId "io.github.tonnyl.sample"
-        minSdkVersion configuration.minSdkVersion
-        targetSdkVersion configuration.targetSdkVersion
+        minSdkVersion versions.min_sdk_version
+        targetSdkVersion versions.target_sdk_version
 
         versionCode 1
         versionName "1.0"
@@ -32,20 +29,20 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':charles')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:${libraries.supportLibraryVersion}"
-    implementation "com.android.support:recyclerview-v7:${libraries.supportLibraryVersion}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
+    implementation "com.android.support:appcompat-v7:${versions.support_library}"
+    implementation "com.android.support:recyclerview-v7:${versions.support_library}"
 
-    implementation "com.github.bumptech.glide:glide:${libraries.glideVersion}"
-    kapt "com.github.bumptech.glide:compiler:${libraries.glideVersion}"
+    implementation "com.github.bumptech.glide:glide:${versions.glide}"
+    kapt "com.github.bumptech.glide:compiler:${versions.glide}"
 
-    implementation "com.squareup.picasso:picasso:${libraries.picassoVersion}"
+    implementation "com.squareup.picasso:picasso:${versions.picasso}"
 
-    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
+    implementation "com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar"
+    implementation "io.reactivex.rxjava2:rxjava:${versions.rxjava2}"
 
-    testImplementation "junit:junit:${libraries.junitVersion}"
+    testImplementation "junit:junit:${versions.junit}"
 
-    androidTestImplementation "com.android.support.test:runner:${libraries.androidTestRunnerRulesVersion}"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:${libraries.espressoVersion}"
+    androidTestImplementation "com.android.support.test:runner:${versions.android_test_runner_rules}"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:${versions.espresso}"
 }
